(lang dune 3.12)

(name caml-8)

(generate_opam_files true)

(source
 (github fatmage/caml-8))

(authors "Michał Bednarz")

(maintainers "Michał Bednarz")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name caml-8)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
